# pyvid

./: .gitignore  .gitlab-ci.yml  .travis.yml  Jenkinsfile  LICENSE.md  README.md  cov.xml  coverage.xml  get_requirements.py  pyproject.toml  pyvid.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
pyvid/: __init__.py  classes.py
test/: test_logger.py  test_pyvid.py  test_vpath.py
